<resources>
    <string name="app_name">SQLite</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">not_registered?</string>
    <string name="register">register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="save">Save</string>
    <string name="event_name">Event name</string>
    <string name="str_next">Next</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_menu_item">Items</string>

</resources>