<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#172235">

    <ImageView
        android:layout_width="421dp"
        android:layout_height="217dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:paddingLeft="2dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="233dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:textColor="#172235"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="236dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:textColor="#172235"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#13705D"
        android:text="@string/register"
        android:textColor="#ffffff" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#ffff" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="86dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="#04ea00"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>